// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Checkbox has a helptext 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <label
      class="toggle-switch"
    >
      <label
        class="toggle-switch simple-toggle-switch"
      >
        <span
          class="toggle-switch-check-bar"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="false"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
        </span>
      </label>
    </label>
    <input
      class="form-control"
      type="hidden"
      value="false"
    />
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    <span
      aria-hidden="true"
      class="form-text"
    >
      Type something
    </span>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      Type something
      <br />
    </span>
  </div>
</div>
`;

exports[`Field Checkbox has a key 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <label
      class="toggle-switch"
    >
      <label
        class="toggle-switch simple-toggle-switch"
      >
        <span
          class="toggle-switch-check-bar"
        >
          <input
            checked=""
            class="toggle-switch-check"
            type="checkbox"
            value="true"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
        </span>
      </label>
    </label>
    <input
      class="form-control"
      type="hidden"
      value="true"
    />
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    
  </div>
</div>
`;

exports[`Field Checkbox has a label 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <label
      class="toggle-switch"
    >
      <label
        class="toggle-switch simple-toggle-switch"
      >
        <span
          class="toggle-switch-check-bar"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="false"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
        </span>
      </label>
      label
    </label>
    <input
      class="form-control"
      type="hidden"
      value="false"
    />
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    
  </div>
</div>
`;

exports[`Field Checkbox has a predefined Value 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <label
      class="toggle-switch"
    >
      <label
        class="toggle-switch simple-toggle-switch"
      >
        <span
          class="toggle-switch-check-bar"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="false"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
        </span>
      </label>
    </label>
    <input
      class="form-control"
      type="hidden"
      value="false"
    />
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    
  </div>
</div>
`;

exports[`Field Checkbox has a value 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <label
      class="toggle-switch"
    >
      <label
        class="toggle-switch simple-toggle-switch"
      >
        <span
          class="toggle-switch-check-bar"
        >
          <input
            checked=""
            class="toggle-switch-check"
            type="checkbox"
            value="true"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
        </span>
      </label>
    </label>
    <input
      class="form-control"
      type="hidden"
      value="true"
    />
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    
  </div>
</div>
`;

exports[`Field Checkbox has an id 1`] = `
<div>
  <div
    aria-labelledby="ID_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <label
      class="toggle-switch"
    >
      <label
        class="toggle-switch simple-toggle-switch"
      >
        <span
          class="toggle-switch-check-bar"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="false"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
        </span>
      </label>
    </label>
    <input
      class="form-control"
      type="hidden"
      value="false"
    />
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    
  </div>
</div>
`;

exports[`Field Checkbox is not editable 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <label
      class="toggle-switch"
    >
      <label
        class="toggle-switch simple-toggle-switch disabled"
      >
        <span
          class="toggle-switch-check-bar"
        >
          <input
            class="toggle-switch-check"
            disabled=""
            type="checkbox"
            value="false"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
        </span>
      </label>
    </label>
    <input
      class="form-control"
      type="hidden"
      value="false"
    />
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    
  </div>
</div>
`;

exports[`Field Checkbox is not required 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <label
      class="toggle-switch"
    >
      <label
        class="toggle-switch simple-toggle-switch"
      >
        <span
          class="toggle-switch-check-bar"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="false"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
        </span>
      </label>
    </label>
    <input
      class="form-control"
      type="hidden"
      value="false"
    />
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    
  </div>
</div>
`;

exports[`Field Checkbox is shown as a switcher 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <label
      class="toggle-switch"
    >
      <label
        class="toggle-switch simple-toggle-switch"
      >
        <span
          class="toggle-switch-check-bar"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="false"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
        </span>
      </label>
    </label>
    <input
      class="form-control"
      type="hidden"
      value="false"
    />
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    
  </div>
</div>
`;

exports[`Field Checkbox is shown as checkbox 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="custom-control custom-checkbox"
    >
      <label>
        <input
          class="custom-control-input"
          type="checkbox"
        />
        <span
          class="custom-control-label"
        />
      </label>
    </div>
    <input
      class="form-control"
      type="hidden"
      value="false"
    />
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    
  </div>
</div>
`;

exports[`Field Checkbox renders Label if showLabel is true 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <label
      class="toggle-switch"
    >
      <label
        class="toggle-switch simple-toggle-switch"
      >
        <span
          class="toggle-switch-check-bar"
        >
          <input
            class="toggle-switch-check"
            type="checkbox"
            value="false"
          />
          <span
            aria-hidden="true"
            class="toggle-switch-bar"
          >
            <span
              class="toggle-switch-handle"
            />
          </span>
        </span>
      </label>
    </label>
    <input
      class="form-control"
      type="hidden"
      value="false"
    />
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    
  </div>
</div>
`;
